@@ -209,6 +209,7 @@ library:
 @item Sony OpenMG (OMA)         @tab   @tab X
     @tab Audio format used in Sony Sonic Stage and Sony Vegas.
 @item Sony PlayStation STR      @tab   @tab X
+@item SoX native format         @tab X @tab X
 @item SUN AU format             @tab X @tab X
 @item THP                       @tab   @tab X
     @tab Used on the Nintendo GameCube.
